modules/eks/sg_cluster.tf
# The security group that allows communications between all nodes and master

resource "aws_security_group" "eks-master" {
  name        = "${var.project_name}-eks-cluster"
  description = "Cluster communication with worker nodes"
  vpc_id      = var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.project_name
  }
}
